2000-06-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/logical.m: Return arg if it is empty.  Better error
	message for non-numeric types.	

2000-05-31  A. Scottedward Hodel <a.s.hodel@eng.auburn.edu>

	* control/base/dlqe.m: Update documentation.  Fix typo.  Warn
	about difference with Matlab dlqe function.

	* control/system/sysmult.m: Fix typo in argument dimensions checking.

2000-05-24  Ben Sapp <bsapp@nua.lampf.lanl.gov>

	* strings/strrep.m: Fix typo.

2000-05-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/strrep.m: Don't transpose result for case of jump > 0.

2000-05-13  Paul Kienzle <pkienzle@kienzle.powernet.co.uk>

	* strings/strrep.m: Avoid for loop for speed.
	* plot/axis.m: Handle string options for Matlab compatibility. 

2000-04-04  John Smith <john@arrows.demon.co.uk>

	* statistics/distributions/beta_inv.m: Provide better(?) initial
	guess for iteration.

2000-03-31   Paul Kienzle  <pkienzle@kienzle.powernet.co.uk>

	* image/image.m: Allow image (A) or image (x, y, A).
	* image/imagesc.m: Likewise.

	* image/image.m: If zoom is not supplied, or if it is an empty
	matrix, autoscale the image.

2000-03-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/title.m, plot/bottom_title.m, plot/top_title.m: 
	Undo string escapes in text twice(!) before sending to gnuplot.

	* image/saveimage.m: Add comment to file saying who created it and
	when it was created.  Suggested by Stephen Eglen
	<stephen@cogsci.ed.ac.uk>.

2000-03-21  Paul Kienzle <pkienzle@kienzle.powernet.co.uk>

	* polynomial/polyreduce.m: Simplify by looking for the first
	non-zero element rather than the last of the first set of zero
	elements.

	* plot/__pltopt1__.m: Accept "--", "-.", and ":" line styles.

2000-03-21  Kai Habel <kahacjde@calvados.zrz.TU-Berlin.DE>

	* image/saveimage.m: Swap black and white colormaps so zero is
	displayed as black and 1 is displayed as white.
	Fix indexing bug in ppm case.

2000-03-06  Stephen Eglen  <stephen@anc.ed.ac.uk>
